added picture blocks for images to index page

--- a/source/companions.html
+++ b/source/companions.html
@@ -579,19 +579,19 @@
                   <ul class="companions__flags card-list__flags card-list__flags-order flags-list">
                     <li class="flags-list__item">
                       <div class="flags-list__country-info">
-                        <img class="flags-list__icon flag" src="img/sri-lanka-flag.png" alt="Флаг Шри-Ланки" />
+                        <img class="flags-list__icon flag" src="img/sri-lanka-flag-small.png" alt="Флаг Шри-Ланки" />
                         <span class="flags-list__flag-caption text">ШРИ-ЛАНКА</span>
                       </div>
                     </li>
                     <li class="flags-list__item">
                       <div class="flags-list__country-info">
-                        <img class="flags-list__icon flag" src="img/thailand-flag.png" alt="Флаг Тайланда" />
+                        <img class="flags-list__icon flag" src="img/thailand-flag-small.png" alt="Флаг Тайланда" />
                         <span class="flags-list__flag-caption">ТАЙЛАНД</span>
                       </div>
                     </li>
                     <li class="flags-list__item">
                       <div class="flags-list__country-info">
-                        <img class="flags-list__icon flag" src="img/seychelles-flag.png" alt="Флаг Сейшилы" />
+                        <img class="flags-list__icon flag" src="img/seychelles-flag-small.png" alt="Флаг Сейшилы" />
                         <span class="flags-list__flag-caption">СЕЙШИЛЫ</span>
                       </div>
                     </li>
@@ -711,13 +711,13 @@
                   <ul class="companions__flags card-list__flags card-list__flags-order flags-list">
                     <li class="flags-list__item">
                       <div class="flags-list__country-info">
-                        <img class="flags-list__icon flag" src="img/belgium-flag.png" alt="Флаг Бельгии" />
+                        <img class="flags-list__icon flag" src="img/belgium-flag-small.png" alt="Флаг Бельгии" />
                         <span class="flags-list__flag-caption text">Бельгия</span>
                       </div>
                     </li>
                     <li class="flags-list__item">
                       <div class="flags-list__country-info">
-                        <img class="flags-list__icon flag" src="img/czech-flag.png" alt="Флаг Чехии" />
+                        <img class="flags-list__icon flag" src="img/czech-flag-small.png" alt="Флаг Чехии" />
                         <span class="flags-list__flag-caption">Чехия</span>
                       </div>
                     </li>
