--- a/source/directions.html
+++ b/source/directions.html
@@ -422,7 +422,7 @@
                     <option class="select__item text" selected>Чехия</option>
                   </select>
                   <p class="select-input-list__dot-image select-input-list__dot-image--active">.</p>
-                  <img src="img/czech-flag.png" class="select-input-list__flag" alt="Флаг страны" />
+                  <img src="img/czech-flag-small.png" class="select-input-list__flag" alt="Флаг страны" />
                   <sup class="select-input-list__remove-country">x</sup>
                 </li>
                 <li class="select-input-list__item">
@@ -496,7 +496,7 @@
                     <h4 class="country-description-list__caption text">
                       Чехия
                     </h4>
-                    <img src="img/czech-flag.png" class="country-description-list__flag" alt="Флаг страны" />
+                    <img src="img/czech-flag-small.png" class="country-description-list__flag" alt="Флаг страны" />
                   </div>
                   <textarea class="country-description-list__change-text text"
                     placeholder="План действий">Пить пиво и лазить по старым замкам, наслаждаться архитектурой и вот это все.</textarea>
